fix getPlayers to get account with team id null